--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,48 +1,24 @@
-# Java Maven CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-# https://circleci.com/docs/2.0/browser-testing/#selenium
-version: 2
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  ui-tests:
+  say-hello:
+    # Specify the execution environment.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: circleci/openjdk:11.0.8-jdk-browsers
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "pom.xml" }}
-            - v1-dependencies-
-      - run: mvn dependency:go-offline
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
-
       - run:
-          name: Running tests
-          command: mvn clean test
-      - run:
-          name: Generate allure report
-          command: mvn allure:report
-          when: always
-      - store_test_results:
-          path: target/surefire-reports/junitreports
-          when: always
-      - store_artifacts:
-          path: target/site/allure-maven-plugin/
+          name: "Say hello"
+          command: "echo Hello, World!"
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  version: 2
-  commit:
+  say-hello-workflow:
     jobs:
-      - ui-tests
-  periodical:
-    triggers:
-      - schedule:
-          cron: "1 4,8,12 * * *"
-          filters:
-            branches:
-              only:
-                - master
-    jobs:
-      - ui-tests
+      - say-hello
